# speech-to-text-lite

./: README.md  audio_to_text.py  output_transcript.txt  pyproject.toml
